Removes unused JavaScript file for cleanup
Deletes an extensive JavaScript file that appears to be unused, likely to reduce clutter and improve maintainability. No replacement or refactor is indicated, suggesting the file is no longer relevant to the project.

--- a/public/selkirk-stone.html
+++ b/public/selkirk-stone.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <fusion-media-yyc
-  agent-id="agent_01jy55btv4ec2rynvqgc3sq745"
-  agent-name="Mark"
+  agent-id="agent_01jy5855gxe4e8b1q86m2qms2q"
+  agent-name="Chris"
 ></fusion-media-yyc>
 <script
   src="https://fusionmediayyc.onrender.com/js/ai.js"
