--- a/public/th-fireplaces-sales.html
+++ b/public/th-fireplaces-sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <fusion-media-yyc
-  agent-id="agent_01jy55btv4ec2rynvqgc3sq745"
-  agent-name="Mark"
+  agent-id="agent_01jy1cwkjgexardc6argng81d3"
+  agent-name="Karma"
 ></fusion-media-yyc>
 <script
   src="https://fusionmediayyc.onrender.com/js/ai.js"
