--- a/public/th-fireplaces-support.html
+++ b/public/th-fireplaces-support.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <fusion-media-yyc
-  agent-id="agent_01jy55btv4ec2rynvqgc3sq745"
-  agent-name="Mark"
+  agent-id="agent_01jy1efkn1fc6tc0zbb731n0bt"
+  agent-name="Lucas"
 ></fusion-media-yyc>
 <script
   src="https://fusionmediayyc.onrender.com/js/ai.js"
